--- a/course_2/scss/main.scss
+++ b/course_2/scss/main.scss
@@ -45,6 +45,7 @@
 
 //-------------------- section form --------------------
 @import 'layout/form';
+@import 'block/modal';
 
 //-------------------- section map --------------------
 @import 'layout/map';
