--- a/course_2/css/main.css
+++ b/course_2/css/main.css
@@ -1009,7 +1009,36 @@ a {
 }
 
 .reviews__list {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   margin-bottom: 1.375rem;
+  overflow: hidden;
+  background: #f5f5f5;
+}
+.reviews__list::before {
+  content: "";
+  position: absolute;
+  top: -4.0625rem;
+  right: 50%;
+  transform: translate(50%, 0);
+  display: block;
+  width: 5.625rem;
+  height: 5.625rem;
+  border-radius: 50%;
+  background: #fff;
+}
+@media screen and (max-width: 768px) {
+  .reviews__list {
+    min-height: 55.6640625vh;
+  }
+}
+@media screen and (max-width: 768px) {
+  .reviews__list {
+    min-height: 71.875vh;
+  }
 }
 
 .rewievs__item {
@@ -1021,22 +1050,9 @@ a {
 
 /*-------------------- block review --------------------*/
 .review {
-  position: relative;
   padding: 3.1875rem 5.9375rem 2.125rem 2.8125rem;
   background: #f5f5f5;
   overflow: hidden;
-}
-.review::before {
-  content: "";
-  position: absolute;
-  top: -4.0625rem;
-  right: 50%;
-  transform: translate(50%, 0);
-  display: block;
-  width: 5.625rem;
-  height: 5.625rem;
-  border-radius: 50%;
-  background: #fff;
 }
 @media screen and (max-width: 768px) {
   .review {
