--- a/course_2/scss/layout/_form.scss
+++ b/course_2/scss/layout/_form.scss
@@ -2,7 +2,7 @@ $form-color: $white-ff;
 
 /*-------------------- layout form --------------------*/
 .form {
-  height: 100vh;
+  height: 100%;
   background: #161616 url(../img/bg/form.jpg) no-repeat center bottom/contain;
   color: $form-color;
 
