--- a/course_2/scss/layout/_products.scss
+++ b/course_2/scss/layout/_products.scss
@@ -6,6 +6,6 @@ $productsBgColor: $white-f5;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: 100%;
   background: $productsBgColor;
 }
