--- a/course_2/scss/layout/_team.scss
+++ b/course_2/scss/layout/_team.scss
@@ -6,7 +6,7 @@ $teamBgColor: $white-ff;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: 100%;
   background: $teamBgColor;
 
   @include tablet {
