--- a/course_2/css/main.css
+++ b/course_2/css/main.css
@@ -53,10 +53,15 @@ a {
 
 /*-------------------- layout base --------------------*/
 .wrapper {
-  display: flex;
-  flex-direction: column;
   width: 100%;
-  min-height: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.maincontent {
+  height: 100%;
+  transition: transform .3s;
+  will-change: transform;
 }
 
 .container {
@@ -116,7 +121,7 @@ a {
     left: 0;
     display: none;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     margin-left: 0;
     background: #313436;
     z-index: 5;
@@ -158,7 +163,7 @@ a {
 
 /*-------------------- layout hero --------------------*/
 .hero {
-  height: 100vh;
+  height: 100%;
   background: #f5f5f5;
 }
 .hero .container {
@@ -411,7 +416,7 @@ a {
 
 /*-------------------- layout advantages --------------------*/
 .advantages {
-  height: 100vh;
+  height: 100%;
 }
 @media screen and (max-width: 480px) {
   .advantages {
@@ -579,7 +584,7 @@ a {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: 100%;
   background: #f5f5f5;
 }
 
@@ -857,7 +862,7 @@ a {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: 100%;
   background: #fff;
 }
 @media screen and (max-width: 768px) {
@@ -979,13 +984,26 @@ a {
   color: #666;
 }
 
+.colors {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+@media screen and (max-width: 480px) {
+  .colors {
+    padding: 0.9375rem 0;
+  }
+}
+
 /*-------------------- layout reviews --------------------*/
 .reviews {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: 100%;
 }
 @media screen and (max-width: 480px) {
   .reviews {
@@ -1174,9 +1192,22 @@ a {
   }
 }
 
+.work {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+@media screen and (max-width: 480px) {
+  .work {
+    padding: 0.9375rem 0;
+  }
+}
+
 /*-------------------- layout form --------------------*/
 .form {
-  height: 100vh;
+  height: 100%;
   background: #161616 url(../img/bg/form.jpg) no-repeat center bottom/contain;
   color: #fff;
 }
@@ -1464,12 +1495,11 @@ a {
 .map {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
 }
 
 .map__yandex {
   flex-grow: 1;
-  background: url(../img/bg/map.jpg) center center/cover no-repeat;
 }
 
 /*-------------------- layout footer --------------------*/
@@ -1564,6 +1594,12 @@ a {
 .radio-menu__item {
   margin-bottom: 0.3125rem;
 }
+.radio-menu__item--activ a {
+  border-color: #e42424;
+}
+.radio-menu__item--activ a::before {
+  background: #e42424;
+}
 
 .radio-menu__link {
   position: relative;
@@ -1584,12 +1620,6 @@ a {
   height: 0.375rem;
   border-radius: 50%;
   background: #999;
-}
-.radio-menu__link--activ {
-  border-color: #e42424;
-}
-.radio-menu__link--activ::before {
-  background: #e42424;
 }
 .radio-menu__link:hover {
   border-color: #e42424;
