--- a/course_2/scss/layout/_header.scss
+++ b/course_2/scss/layout/_header.scss
@@ -30,7 +30,7 @@ $headerMenuBgColor: $grey-31;
     left: 0;
     display: none;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     margin-left: 0;
     background: $headerMenuBgColor;
     z-index: 5;
