--- a/course_2/scss/layout/_reviews.scss
+++ b/course_2/scss/layout/_reviews.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: 100%;
 
   @include mobile {
     padding: rem(15px) 0;
