--- a/course_2/css/main.css
+++ b/course_2/css/main.css
@@ -865,8 +865,12 @@ a {
   height: 100%;
   background: #fff;
 }
+.team__desktop {
+  display: block;
+  height: 100%;
+}
 @media screen and (max-width: 768px) {
-  .team {
+  .team__desktop {
     display: none;
   }
 }
@@ -888,19 +892,21 @@ a {
   display: flex;
   justify-content: space-between;
 }
+@media screen and (max-width: 768px) {
+  .team__list {
+    flex-direction: column;
+  }
+}
 .team__item {
   flex: 0 0 calc(100% / 4 - 15px);
 }
-
-.team--mobile {
+.team__mobile {
   display: none;
+  height: 100%;
 }
 @media screen and (max-width: 768px) {
-  .team--mobile {
-    display: flex;
-  }
-  .team--mobile .team__list {
-    flex-direction: column;
+  .team__mobile {
+    display: block;
   }
 }
 
@@ -985,16 +991,90 @@ a {
 }
 
 .colors {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   height: 100%;
+  background: url("../img/bg/accordion.jpg") center center/cover no-repeat;
 }
 @media screen and (max-width: 480px) {
   .colors {
     padding: 0.9375rem 0;
   }
+}
+.colors .container {
+  padding-top: 5.3125rem;
+}
+.colors__title {
+  font-size: 3rem;
+  font-weight: bold;
+  line-height: 1.2;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+.accordeon {
+  position: relative;
+  min-height: 100%;
+}
+.accordeon__list {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: flex;
+  height: 100%;
+}
+.accordeon__item {
+  display: flex;
+  height: 100%;
+}
+.accordeon__trigger {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  width: 6.25rem;
+  border: none;
+  outline: none;
+  padding: 0 3.125rem;
+  cursor: pointer;
+}
+.accordeon__title {
+  transform: rotate(-90deg);
+  width: 100%;
+  font-size: 2.25rem;
+  font-weight: bold;
+  color: #fff;
+  white-space: nowrap;
+}
+.accordeon__wrap {
+  width: 0;
+  overflow: hidden;
+  transition: .3s;
+}
+.accordeon__content {
+  position: relative;
+  min-width: 33.125rem;
+  height: 100%;
+  overflow-y: auto;
+  padding: 2.125rem 7rem 2.125rem 1.75rem;
+  background-color: rgba(51, 53, 55, 0.93);
+  color: #fff;
+}
+.accordeon__content p {
+  line-height: 1.5;
+}
+.accordeon__close {
+  position: absolute;
+  right: 2rem;
+  top: 1.625rem;
+  width: 1.25rem;
+  height: 1.25rem;
+  border: none;
+  outline: none;
+  padding: 0;
+  background: transparent;
+  cursor: pointer;
+}
+
+.accordeon .active .accordeon__wrap {
+  width: 33.125rem;
 }
 
 /*-------------------- layout reviews --------------------*/
