--- a/course_2/scss/layout/_team.scss
+++ b/course_2/scss/layout/_team.scss
@@ -9,8 +9,13 @@ $teamBgColor: $white-ff;
   height: 100%;
   background: $teamBgColor;
 
-  @include tablet {
-    display: none;
+  &__desktop {
+    display: block;
+    height: 100%;
+
+    @include tablet {
+      display: none;
+    }
   }
 
   &__title {
@@ -30,20 +35,22 @@ $teamBgColor: $white-ff;
   &__list {
     display: flex;
     justify-content: space-between;
+
+    @include tablet {
+      flex-direction: column;
+    }
   }
 
   &__item {
     flex: 0 0 calc(100% / 4 - 15px);
   }
-}
-.team--mobile {
-  display: none;
 
-  @include tablet {
-    display: flex;
+  &__mobile {
+    display: none;
+    height: 100%;
 
-    & .team__list {
-      flex-direction: column;
+    @include tablet {
+      display: block;
     }
   }
 }
