--- a/course_2/css/main.css
+++ b/course_2/css/main.css
@@ -163,6 +163,7 @@ a {
 
 /*-------------------- layout hero --------------------*/
 .hero {
+  position: relative;
   height: 100%;
   background: #f5f5f5;
 }
@@ -280,6 +281,17 @@ a {
   .hero .properties {
     display: none;
   }
+}
+
+.rectangle {
+  position: absolute;
+  top: 100%;
+  right: 7.2727272727vw;
+  transform: translate(0, -50%) rotate(40deg);
+  width: 11px;
+  height: 47px;
+  background: #999;
+  z-index: 5;
 }
 
 .logo {
@@ -416,6 +428,7 @@ a {
 
 /*-------------------- layout advantages --------------------*/
 .advantages {
+  position: relative;
   height: 100%;
 }
 @media screen and (max-width: 480px) {
@@ -502,6 +515,19 @@ a {
   }
 }
 
+.triangle {
+  position: absolute;
+  top: 100%;
+  left: 7.2727272727vw;
+  transform: translate(0, -20%) rotate(40deg);
+  width: 0;
+  height: 0;
+  border-top: 33px solid #e01f3d;
+  border-left: 20px solid transparent;
+  border-right: 20px solid transparent;
+  z-index: 5;
+}
+
 /*-------------------- block advantages --------------------*/
 .advantage {
   display: flex;
@@ -580,12 +606,24 @@ a {
 
 /*-------------------- layout products --------------------*/
 .products {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100%;
   background: #f5f5f5;
+}
+
+.square {
+  position: absolute;
+  top: 100%;
+  right: 7.2727272727vw;
+  transform: translate(0, -20%) rotate(30deg);
+  width: 27px;
+  height: 27px;
+  background: #000;
+  z-index: 5;
 }
 
 /*-------------------- block product --------------------*/
@@ -862,12 +900,20 @@ a {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  min-height: 100%;
   background: #fff;
+}
+.team .container {
+  min-height: 41.25rem;
+}
+@media screen and (max-width: 480px) {
+  .team .container {
+    min-height: 82.5vh;
+  }
 }
 .team__desktop {
   display: block;
-  height: 100%;
+  min-height: 100%;
 }
 @media screen and (max-width: 768px) {
   .team__desktop {
@@ -992,11 +1038,11 @@ a {
 
 .colors {
   height: 100%;
-  background: url("../img/bg/accordion.jpg") center center/cover no-repeat;
+  background: #000 url("../img/bg/accordion.jpg") left -630px center/cover no-repeat;
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   .colors {
-    padding: 0.9375rem 0;
+    background-position: left -830px center;
   }
 }
 .colors .container {
@@ -1008,6 +1054,11 @@ a {
   line-height: 1.2;
   text-transform: uppercase;
   color: #fff;
+}
+@media screen and (max-width: 480px) {
+  .colors__title {
+    font-size: 10vw;
+  }
 }
 
 .accordeon {
@@ -1021,9 +1072,23 @@ a {
   display: flex;
   height: 100%;
 }
+@media screen and (max-width: 480px) {
+  .accordeon__list {
+    justify-content: flex-end;
+    width: 100%;
+  }
+}
 .accordeon__item {
   display: flex;
   height: 100%;
+}
+@media screen and (max-width: 480px) {
+  .accordeon__item.active {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
+  }
 }
 .accordeon__trigger {
   display: flex;
@@ -1035,6 +1100,12 @@ a {
   padding: 0 3.125rem;
   cursor: pointer;
 }
+@media screen and (max-width: 480px) {
+  .accordeon__trigger {
+    width: 5rem;
+    padding: 3.125rem 0;
+  }
+}
 .accordeon__title {
   transform: rotate(-90deg);
   width: 100%;
@@ -1043,22 +1114,47 @@ a {
   color: #fff;
   white-space: nowrap;
 }
+@media screen and (max-width: 768px) {
+  .accordeon__title {
+    font-size: 3rem;
+  }
+}
+@media screen and (max-width: 480px) {
+  .accordeon__title {
+    font-size: 2.25rem;
+  }
+}
 .accordeon__wrap {
   width: 0;
   overflow: hidden;
-  transition: .3s;
+  transition: 1s;
 }
 .accordeon__content {
   position: relative;
-  min-width: 33.125rem;
+  max-width: 33.125rem;
   height: 100%;
   overflow-y: auto;
   padding: 2.125rem 7rem 2.125rem 1.75rem;
   background-color: rgba(51, 53, 55, 0.93);
   color: #fff;
 }
+@media screen and (max-width: 768px) {
+  .accordeon__content {
+    max-width: 29.6875rem;
+  }
+}
+@media screen and (max-width: 480px) {
+  .accordeon__content {
+    padding: 3.125rem 1.875rem 1.875rem 1.75rem;
+  }
+}
 .accordeon__content p {
   line-height: 1.5;
+}
+@media screen and (max-width: 480px) {
+  .accordeon__content p {
+    font-size: 3.3333333333vw;
+  }
 }
 .accordeon__close {
   position: absolute;
@@ -1072,13 +1168,29 @@ a {
   background: transparent;
   cursor: pointer;
 }
+@media screen and (max-width: 480px) {
+  .accordeon__close {
+    right: 0.625rem;
+  }
+}
 
 .accordeon .active .accordeon__wrap {
   width: 33.125rem;
 }
+@media screen and (max-width: 768px) {
+  .accordeon .active .accordeon__wrap {
+    width: 29.6875rem;
+  }
+}
+@media screen and (max-width: 480px) {
+  .accordeon .active .accordeon__wrap {
+    width: auto;
+  }
+}
 
 /*-------------------- layout reviews --------------------*/
 .reviews {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1144,6 +1256,18 @@ a {
 }
 .rewievs__item--activ {
   display: flex;
+}
+
+.circle {
+  position: absolute;
+  top: 100%;
+  left: 7.2727272727vw;
+  transform: translate(0, -50%);
+  width: 34px;
+  height: 34px;
+  border-radius: 50%;
+  background: #999;
+  z-index: 5;
 }
 
 /*-------------------- block review --------------------*/
@@ -1273,16 +1397,207 @@ a {
 }
 
 .work {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100%;
+  background: #f5f5f5;
 }
 @media screen and (max-width: 480px) {
   .work {
     padding: 0.9375rem 0;
   }
+}
+.work .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100%;
+}
+.work__title {
+  margin-bottom: 2.9375rem;
+  font-size: 3rem;
+  font-weight: bold;
+  line-height: 1.2;
+  text-align: center;
+  text-transform: uppercase;
+}
+@media screen and (max-width: 480px) {
+  .work__title {
+    margin-bottom: 1.375vh;
+    font-size: 4.5vh;
+  }
+}
+
+.player {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 41.25rem;
+  height: 25.625rem;
+  line-height: 1;
+  background: #000;
+}
+@media screen and (max-width: 768px) {
+  .player {
+    width: 37.5rem;
+    height: 22.8125rem;
+  }
+}
+@media screen and (max-width: 480px) {
+  .player {
+    width: 83.3333333333vw;
+    height: 51.0416666667vw;
+  }
+}
+.player__video {
+  flex: 1 0;
+  width: 100%;
+  height: 100%;
+}
+.player__splash {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 3.25rem;
+  height: 4.625rem;
+  border: none;
+  outline: none;
+  padding: 0;
+  background: url("../img/icons/play.svg") center center no-repeat;
+  cursor: pointer;
+}
+.player__splash.play {
+  display: none;
+}
+.player__splash.pause {
+  display: inline-block;
+}
+.player__controls {
+  flex: 0 0 2.5rem;
+  display: flex;
+  align-items: center;
+  background: #000;
+}
+.player__start {
+  width: 1rem;
+  height: 1.375rem;
+  border: none;
+  outline: none;
+  margin: 0 1.25rem;
+  padding: 0;
+  background: url("../img/icons/play.svg") center center no-repeat;
+  cursor: pointer;
+}
+.player__start.play {
+  background: url("../img/icons/pause.svg") center center no-repeat;
+}
+.player__start.pause {
+  background: url("../img/icons/play.svg") center center no-repeat;
+}
+.player__playback {
+  flex-grow: 1;
+  position: relative;
+  height: 0.375rem;
+  margin-right: 2.75rem;
+  background: #e01f3d;
+  cursor: pointer;
+}
+.player__playcurrent {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translate(0, -50%);
+  display: block;
+  width: 0%;
+  height: 6px;
+  background: #303030;
+  pointer-events: none;
+}
+.player__playback-button {
+  position: absolute;
+  top: 50%;
+  left: 0%;
+  transform: translate(-50%, -50%);
+  width: 0.75rem;
+  height: 0.75rem;
+  border: none;
+  border-radius: 50%;
+  outline: none;
+  padding: 0;
+  background: #e01f3d;
+  cursor: pointer;
+  z-index: 5;
+}
+.player__muted {
+  position: relative;
+  width: 1rem;
+  height: 1.25rem;
+  border: none;
+  outline: none;
+  padding: 0;
+  background: url("../img/icons/volume.svg") center center no-repeat;
+  cursor: pointer;
+}
+.player__muted.muted::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 3px;
+  height: 25px;
+  transform: translate(0, -50%) rotate(-45deg);
+  background: #777;
+}
+.player__volumeback {
+  position: relative;
+  width: 3.75rem;
+  display: flex;
+  align-items: center;
+  margin: 0 1.25rem;
+  height: 0.375rem;
+  background: #e01f3d;
+  cursor: pointer;
+}
+.player__volumecurrent {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translate(0, -50%);
+  display: block;
+  width: 0%;
+  height: 6px;
+  background: #303030;
+  pointer-events: none;
+}
+.player__volumeback-button {
+  position: absolute;
+  top: 50%;
+  left: 0%;
+  transform: translate(-50%, -50%);
+  width: 0.75rem;
+  height: 0.75rem;
+  border: none;
+  border-radius: 50%;
+  outline: none;
+  padding: 0;
+  background: #e01f3d;
+  cursor: pointer;
+  z-index: 5;
+}
+
+.pentagon {
+  position: absolute;
+  top: 100%;
+  right: 9.0909090909vw;
+  transform: translate(0, -50%);
+  width: 47px;
+  height: 47px;
+  background: url("../img/bg/pentagon.svg");
 }
 
 /*-------------------- layout form --------------------*/
