--- a/course_2/scss/layout/_reviews.scss
+++ b/course_2/scss/layout/_reviews.scss
@@ -1,5 +1,6 @@
 /*-------------------- layout reviews --------------------*/
 .reviews {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -60,4 +61,15 @@
   &--activ {
     display: flex;
   }
+}
+.circle {
+  position: absolute;
+  top: 100%;
+  left: vw(80, 1100);
+  transform: translate(0, -50%);
+  width: 34px;
+  height: 34px;
+  border-radius: 50%;
+  background: #999;
+  z-index: 5;
 }
