--- a/course_2/scss/layout/_team.scss
+++ b/course_2/scss/layout/_team.scss
@@ -6,12 +6,20 @@ $teamBgColor: $white-ff;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  min-height: 100%;
   background: $teamBgColor;
+
+  & .container {
+    min-height: rem(660px);
+
+    @include mobile {
+      min-height: vh(660, 800);
+    }
+  }
 
   &__desktop {
     display: block;
-    height: 100%;
+    min-height: 100%;
 
     @include tablet {
       display: none;
