--- a/course_2/scss/layout/_work.scss
+++ b/course_2/scss/layout/_work.scss
@@ -1,11 +1,216 @@
 .work {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100%;
+  background: #f5f5f5;
 
   @include mobile {
     padding: rem(15px) 0;
   }
+
+  & .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100%;
+  }
+
+  &__title {
+    margin-bottom: rem(47px);
+    font-size: rem(48px);
+    font-weight: bold;
+    line-height: 1.2;
+    text-align: center;
+    text-transform: uppercase;
+  
+    @include mobile {
+      margin-bottom: vh(11, 800);
+      font-size: vh(36, 800);
+    }
+  }
+}
+
+.player {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: rem(660px);
+  height: rem(410px);
+  line-height: 1;
+  background: #000;
+
+  @include tablet {
+    width: rem(600px);
+    height: rem(365px);
+  }
+
+  @include mobile {
+    width: vw(400, 480);
+    height: vw(245, 480);
+  }
+
+  &__video {
+    flex: 1 0;
+    width: 100%;
+    height: 100%;
+  }
+
+  &__splash {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: rem(52px);
+    height: rem(74px);
+    border: none;
+    outline: none;
+    padding: 0;
+    background: url("../img/icons/play.svg") center center no-repeat;
+    cursor: pointer;
+    
+    &.play {
+      display: none;
+    }
+
+    &.pause {
+      display: inline-block;
+    }
+  }
+
+  &__controls {
+    flex: 0 0 rem(40px);
+    display: flex;
+    align-items: center;
+    background: #000;
+  }
+
+  &__start {
+    width: rem(16px);
+    height: rem(22px);
+    border: none;
+    outline: none;
+    margin: 0 rem(20px);
+    padding: 0;
+    background: url("../img/icons/play.svg") center center no-repeat;
+    cursor: pointer;
+    
+    &.play {
+      background: url("../img/icons/pause.svg") center center no-repeat;
+    }
+    
+    &.pause {
+      background: url("../img/icons/play.svg") center center no-repeat;
+    }
+  }
+
+  &__playback {
+    flex-grow: 1;
+    position: relative;
+    height: rem(6px);
+    margin-right: rem(44px);
+    background: #e01f3d;
+    cursor: pointer;
+  }
+  
+  &__playcurrent {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translate(0, -50%);
+    display: block;
+    width: 0%;
+    height: 6px;
+    background: #303030;
+    pointer-events: none;
+  }
+
+  &__playback-button {
+    position: absolute;
+    top: 50%;
+    left: 0%;
+    transform: translate(-50%, -50%);
+    width: rem(12px);
+    height: rem(12px);
+    border: none;
+    border-radius: 50%;
+    outline: none;
+    padding: 0;
+    background: #e01f3d;
+    cursor: pointer;
+    z-index: 5;
+  }
+
+  &__muted{
+    position: relative;
+    width: rem(16px);
+    height: rem(20px);
+    border: none;
+    outline: none;
+    padding: 0;
+    background: url("../img/icons/volume.svg") center center no-repeat;
+    cursor: pointer;
+    
+    &.muted::before {
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 3px;
+      height: 25px;
+      transform: translate(0, -50%) rotate(-45deg);
+      background: #777;
+    }    
+  }
+
+  &__volumeback {
+    position: relative;
+    width: rem(60px);
+    display: flex;
+    align-items: center;
+    margin: 0 rem(20px);
+    height: rem(6px);
+    background: #e01f3d;
+    cursor: pointer;
+  }
+
+  &__volumecurrent {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translate(0, -50%);
+    display: block;
+    width: 0%;
+    height: 6px;
+    background: #303030;
+    pointer-events: none;
+  }
+
+  &__volumeback-button {
+    position: absolute;
+    top: 50%;
+    left: 0%;
+    transform: translate(-50%, -50%);
+    width: rem(12px);
+    height: rem(12px);
+    border: none;
+    border-radius: 50%;
+    outline: none;
+    padding: 0;
+    background: #e01f3d;
+    cursor: pointer;
+    z-index: 5;
+  }
+}
+.pentagon {
+  position: absolute;
+  top: 100%;
+  right: vw(100, 1100);
+  transform: translate(0, -50%);
+  width: 47px;
+  height: 47px;
+  background: url("../img/bg/pentagon.svg");
 }
